Second pages commit

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Veter-project GitHub Page
+<html>
+<head>
+<title>Veter - robot for researchers</title>
+</head>
+<body>
+
+<center>
+<img src="vlogo2.png"><br>
+robotics vehicle for researchers and makers
+</center>
+
+</body>
+</html>
