Fourth pages commit

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 
 <center>
 <img src="vlogo2.png"><br>
-robotics vehicle for researchers and makers
+<font face="arial" size="4" color="0e4d6c">
+<b>Veter - robotics vehicle for researchers and makers</b>
+</font>
 </center>
 
 </body>
